--- a/.env
+++ b/.env
@@ -48,13 +48,13 @@ REDIS_HOST=127.0.0.1
 REDIS_PASSWORD=null
 REDIS_PORT=6379
 
-MAIL_MAILER=log
+MAIL_MAILER=smtp
 MAIL_SCHEME=null
-MAIL_HOST=127.0.0.1
-MAIL_PORT=2525
-MAIL_USERNAME=null
-MAIL_PASSWORD=null
-MAIL_FROM_ADDRESS="hello@example.com"
+MAIL_HOST="smtp.mailjet.com"
+MAIL_PORT=587
+MAIL_USERNAME="2d4c28c698f31ffad3f4cc7aa4920aea"
+MAIL_PASSWORD="6ccd45aebda01a6f6be03af7af87b6ab"
+MAIL_FROM_ADDRESS="elreydelabici@gmail.com"
 MAIL_FROM_NAME="${APP_NAME}"
 
 AWS_ACCESS_KEY_ID=
